Spacing Fixed
Smaller screen fixed

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ p, a{
 }
 
 .large-screen-b {
-    max-width: 1400px;
+    max-width: 1700px;
     margin: 0 auto;
 }
 
@@ -181,7 +181,7 @@ font-size: .75rem;
 }
 
 .bilpad{
-  padding: 7.5em 0;
+  padding: 16.5em 0;
 }
 
 .overflow{
@@ -216,6 +216,12 @@ font-size: .75rem;
 .bilpad {
   padding: 35.5em 0;
 }
+
+.gutter-8 {
+  padding-left: 8.5000rem;
+  padding-right: 8.5000rem;
+}
+
 }
 
 @media only screen and (min-width:68em){
